<resources>
    <string name="app_name">ASMS</string>
    <string name="lable_yes">YES</string>
    <string name="lable_no">NO</string>
    <string name="lable_ok">OK</string>
    <string name="lable_notok">NOT OK</string>
    <string name="title_EnterUsername_Eng">Username </string>
    <string name="title_EnterPassword_Eng">Password </string>
    <string name="title_ButtonLogin_Eng">Login</string>
    <string name="title_HintUsername_Eng">Enter username!</string>
    <string name="title_HintPassword_Eng">Enter password!</string>
    <string name="title_ButtonLogout_Eng">Logout</string>
    <string name="title_DeviceID_Eng">Device Id</string>
    <string name="info_closing">Do you want to close the application?</string>
    <string name="info_backing">Form data will be lost. Do you want to continue?</string>
    <string name="info_pwdchk_eng">Please contact admin to change your password, otherwise it will be expired in </string>
    <string name="info_pwdchk_guj">Please change your password, it will expire in 45 days!</string>
    <string name="title_EnterUsername_Guj">yuzrnem</string>
    <string name="title_EnterPassword_Guj">pasvDR </string>
    <string name="title_DeviceID_Guj">DIva{s Aa{DI</string>
    <string name="title_detail_contractor_Eng">Contractor</string>
    <string name="title_detail_team_Eng">Team</string>
    <string name="title_detail_technician_Eng">Technician</string>
    <string name="title_detail_fileName_Eng">Installation File Name</string>
    <string name="title_detail_fileInsatll_Eng">Last Installation Date and Time</string>
    <string name="title_detail_fileCreated_Eng">File Created On</string>
    <string name="title_detail_contractor_Guj">kon§aK3r</string>
    <string name="title_detail_team_Guj">3Im</string>
    <string name="title_detail_technician_Guj">3eKnIsIyn</string>
    <string name="title_detail_fileName_Guj">[NaS3ol 4yelI fa{l n&amp;gt;u nam</string>
    <string name="title_detail_fileInsatll_Guj">[NaS3ol nI tairq smy</string>
    <string name="title_summary_testing">Is Testing Done?</string>
    <string name="title_summary_clamping">Is Clamping work on gas line satisfactory?</string>
    <string name="title_summary_painting">Is painting work satisfactory?</string>
    <string name="title_summary_rccguard">Is R.C.C. guard installed properly?</string>
    <string name="title_summary_surakshatube">Is Suraksha tube replaced?</string>
    <string name="title_summary_meterperformance">Is Meter OK?</string>
    <string name="title_summary_conformance">Conformance</string>
    <string name="title_summary_testing_Guj">xu&amp;gt; 3eS3I&amp;gt;g krel 0e?</string>
    <string name="title_summary_clamping_Guj">kleMpIg nu&amp;gt; kam s&amp;gt;tae8kark 0e?</string>
    <string name="title_summary_painting_Guj">Klr nu&amp;gt; kam s&amp;gt;tae8kark 0e?</string>
    <string name="title_summary_rccguard_Guj">Aar.sI. sI. gaDœ brabr lagel 0e?</string>
    <string name="title_summary_surakshatube_Guj">sur9a pa[p bdlel 0e?</string>
    <string name="title_summary_meterperformance_Guj">xu&amp;gt; mI3r brobr 0e?</string>
    <string name="title_summary_conformance_Guj">kNfoRmNs</string>
    <string name="title_header_customer_id_Eng">Customer Id</string>
    <string name="title_header_customer_name_Eng">Customer Name</string>
    <string name="title_header_contact_number_Eng">Contact Number</string>
    <string name="title_header_date_time_Eng">Date &amp; Time</string>
    <string name="title_header_status_Eng">Status</string>
    <string name="title_header_customer_id_Guj"> g/ahk n&amp;gt;br</string>
    <string name="title_header_customer_name_Guj"> g/ahk n&amp;gt;u nam</string>
    <string name="title_header_date_time_Guj">tarIq Ane smy</string>
    <string name="title_header_status_Guj">S3e3s</string>
    <string name="title_header_contact_number_Guj">KoN3ek n&amp;gt;br</string>
    <string name="title_header_damage">Damage</string>
    <string name="title_header_cause">Cause</string>
    <string name="title_header_LogingBox_Eng">Login</string>
    <string name="header_painting_Eng">PAINTING &amp; O RING</string>
    <string name="header_rcc_Eng">R.C.C.</string>
    <string name="header_SurakshaTube_Eng">SURAKSHA TUBE</string>
    <string name="header_kitchen_suraksha_tube_Eng">KITCHEN SURAKSHA TUBE</string>
    <string name="header_other_suraksha_tube_Eng">OTHER SURAKSHA TUBE</string>
    <string name="header_Make_Geyser_Eng">GEYSER &amp; MAKE</string>
    <string name="header_otherChecks_Eng">OTHER CHECKS</string>
    <string name="header_testing_Eng">TESTING</string>
    <string name="header_testing_gifittings_Eng">GI FITTINGS</string>
    <string name="header_clamping_Eng">CLAMPING</string>
    <string name="header_Feedback_Eng">CUSTOMER</string>
    <string name="header_FAQ_Eng">FAQ</string>
    <string name="header_Conformance_Eng">CONFORMANCE</string>
    <string name="header_settings_chng_lang">CHANGE LANGUAGE</string>
    <string name="header_settings_details">DETAILS</string>
    <string name="header_Summary">SUMMARY</string>
    <string name="header_setting_chng_password">CHANGE PASSWORD</string>
    <string name="header_Help_Eng">HELP</string>
    <string name="header_settings_sync">SUBMIT DATA</string>
    <string name="header_Admin_Eng">ADMIN</string>
    <string name="header_AdminService_Ip">Server IP Setting</string>
    <string name="header_AdminService_PassUnlock">Clear Data</string>
    <string name="header_Admin_Service_Eng">Admin Service</string>
    <string name="header_settings_server_setup">Server Setup</string>
    <string name="header_setting_sync_summary">DATA SUBMISSION SUMMARY</string>
    <string name="header_setting_details_summary">LAST INSTALLATION DETAILS</string>
    <string name="header_setting_view_log">Application Log</string>
    <string name="title_header_LogingBox_Guj">logIn</string>
    <string name="header_painting_Guj">klr Ane “È” rI&amp;gt;g</string>
    <string name="header_rcc_Guj">Aar.sI. sI. gaDœ</string>
    <string name="header_SurakshaTube_Guj">sur9a pa[p</string>
    <string name="header_kitchen_suraksha_tube_Guj">RrsoDa nI sur9a pa[p</string>
    <string name="header_other_suraksha_tube_Guj">ANy sur(aa pa[p</string>
    <string name="header_Make_Geyser_Guj">gIzr ƒND mek</string>
    <string name="header_otherChecks_Guj"> ANy cek</string>
    <string name="header_testing_Guj">3eS3I&amp;gt;g</string>
    <string name="header_testing_gifittings_Guj">jI.Aa[.fI3I&amp;gt;g</string>
    <string name="header_clamping_Guj"> kleMpI&amp;gt;g</string>
    <string name="header_Feedback_Guj">  g/ahk </string>
    <string name="header_FAQ_Guj">ƒF.ƒ.Kyu</string>
    <string name="header_Help_Guj">heLp</string>
    <string name="header_Admin_Guj">ƒDmIn</string>
    <string name="header_AdminService_Guj">ƒDmIn svIRs</string>
    <string name="header_Conformance_Guj">kNfoRmNs</string>
    <string name="header_Admin_Service_Guj">ƒDmIn svIRs</string>
    <string name="help_text">\"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="synchro_text_Eng">Click on the ‘Submit’ button below to synchronize the customer data you have captured on field. </string>
    <string name="synchro_text_Guj">Tame g/ahk MaaihtI Aek#I KrI 0e .sbim3 b3nne iKlk kro.</string>
    <string name="sync_auto_submssion_Eng">Auto submission process is running!</string>
    <string name="sync_auto_submssion_Guj"/>
    <string name="sync_auto_submssion_lstdt_Eng">Last Data  Submitted Date &amp; Time </string>
    <string name="title_testing_initial_pressure_Eng">Initial Pressure</string>
    <string name="title_testing_final_pressure_Eng">Final Pressure</string>
    <string name="title_testing_pressure_drop_Eng">Pressure Drop</string>
    <string name="title_testing_duration_Eng">Duration (Minutes)</string>
    <string name="title_testing_test_pass_Eng">Did Gas Leakage Detection Test Pass ?</string>
    <string name="title_testing_test_pass_reason_Eng">Where is the leakage?</string>
    <string name="title_testing_test_pass_remarkforlkg_Eng">Remark for leakage Description</string>
    <string name="title_testing_brass_ball_cock_Eng">Brass Ball Cock -8100364</string>
    <string name="title_testing_customer_appliance_Eng">Customer Appliance - not to update in SAP</string>
    <string name="title_testing_gi_fitting_Eng">GI Fitting</string>
    <string name="title_testing_gi_pipe_Eng">GI Pipe</string>
    <string name="title_testing_hose_clamp_Eng">Hose Clamp</string>
    <string name="title_testing_isolation_valve_Eng">Isolation Valve</string>
    <string name="title_testing_meter_Eng">Meter</string>
    <string name="title_testing_regulator_Eng">Regulator</string>
    <string name="title_testing_rubber_cap_Eng">Rubber Cap</string>
    <string name="title_testing_suraksha_hose_Eng">Suraksha Hose</string>
    <string name="title_testing_others_Eng">Others</string>
    <string name="title_testing_pressure_type_Eng">Low/Normal/High Pressure</string>
    <string name="title_testing_leakage_rectified_Eng">Is Gas Leakage Rectified?</string>
    <string name="title_testing_gi_statisfactory_Eng">Is GI Fitting work on gas link satisfactory?</string>
    <string name="title_testing_gi_elbow_Eng">Elbow</string>
    <string name="title_testing_gi_tee_Eng">Tee</string>
    <string name="title_testing_gi_hex_nipple_Eng">Hex Nipple</string>
    <string name="title_testing_gi_union_Eng">Union</string>
    <string name="title_testing_gi_plug_Eng">Plug</string>
    <string name="title_testing_gi_gi_cap_Eng">GI Cap</string>
    <string name="title_testing_gi_gi_coupling_Eng">GI Coupling</string>
    <string name="title_view_log_date_Eng">Start Time</string>
    <string name="title_testing_initial_pressure_Guj">x½Aat nu p/exr</string>
    <string name="title_testing_final_pressure_Guj">eA&amp;gt;&amp;gt;itm p/exr</string>
    <string name="title_testing_pressure_drop_Guj">p/exr m&amp;gt;a 23aDo</string>
    <string name="title_testing_duration_Guj">smy ga5o ÜmInI3 ma&amp;gt;Ý</string>
    <string name="title_testing_test_pass_Guj"> xu&amp;gt; lIkej m%yu 0e? </string>
    <string name="title_testing_test_pass_reason_Guj">lIkej ky&amp;gt;a 0e?</string>
    <string name="title_testing_test_pass_remarkforlkg_Guj">lIkej ivgt nI no&amp;gt;2</string>
    <string name="title_testing_brass_ball_cock_Guj"> ges 3ep</string>
    <string name="title_testing_customer_appliance_Guj"> g/ahk na sa2n ma&amp;gt;</string>
    <string name="title_testing_gi_fitting_Guj"> jI.Aa[. fI3I&amp;gt;g </string>
    <string name="title_testing_gi_pipe_Guj">jI.Aa[.pa[p</string>
    <string name="title_Nonconformancereason">Non-Conformance Reason </string>
    <string name="title_conformance_IsNC_Eng">Is N.C.?</string>
    <string name="hint_Enter_reason">Enter reason for nonconformance</string>
    <string name="button_viewassign_Find_Eng">Find </string>
    <string name="title_EmptyList_Eng">No records found! </string>
    <string name="errro_manditory_message_Eng">* Mandatory Fields</string>
    <string name="title_view_log_response_time">Response Time</string>
    <string name="title_view_log_submit_status">Submit Status</string>
    <string name="title_view_log_submit_status_code">Response Code</string>
    <string name="title_view_log_batchsize">Batch Size</string>
    <string name="title_view_log_total_submitted_records">Total Submitted</string>
    <string name="title_view_log_exception">Exception</string>
    <string name="title_view_log_object_status">Object Status</string>
    <string name="lbl_view_blank_log">View Blank Log</string>
</resources>