<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/form_background_grey"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="20dp" >
    
     <RelativeLayout
        android:id="@+id/relViewAssignHeaderMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/searchpannel"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp" >


    
    <RelativeLayout android:id="@+id/relViewFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp">
        
        <TextView
            android:id="@+id/lblStartDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btnViewAssignHeaderMru"
            android:text="@string/title_view_log_date_Eng"
            android:textColor="@color/form_green"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>
        
         <Button
            android:id="@+id/btnViewLogDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@drawable/big_left"
            android:drawableRight="@drawable/big_right"
            android:gravity="left|center"
            android:layout_toRightOf="@+id/lblStartDateTime"
            android:layout_marginLeft="10dp"
            android:text="Select"
            android:paddingLeft="4dp" />
         
         <Button
            android:id="@+id/btnViewLogFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_find"
            android:layout_marginLeft="10dp"
            android:text="@string/button_viewassign_Find_Eng"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/btnViewLogDialog"
            android:textSize="18sp"
            android:layout_marginRight="5dp"
            android:textStyle="bold" >
        </Button>
        
<!--          <Button -->
<!--             android:id="@+id/btnViewLogRefresh" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_centerVertical="true" -->
<!--             android:background="@drawable/button_refresh" -->
<!--             android:paddingLeft="25dp" -->
<!--             android:layout_marginLeft="10dp" -->
<!--             android:text="@string/button_viewassign_Refresh_Eng" -->
<!--             android:textColor="@color/white" -->
<!--             android:layout_toRightOf="@+id/btnViewLogFind" -->
<!--             android:textSize="18sp" -->
<!--             android:layout_marginRight="5dp" -->
<!--             android:textStyle="bold" > -->
<!--         </Button> -->
        
         <CheckBox
             android:id="@+id/chkLogView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/btnViewLogFind"
             android:paddingLeft="10dp"
             android:button="@drawable/checkbox_empty" 
             android:textColor="@color/form_green"
             android:textSize="15sp"
             android:textStyle="bold"
             android:text="@string/lbl_view_blank_log" />
         
        
    </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relViewAssignBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relViewAssignHeaderMain"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/relViewAssignListHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/banner_tabletop" >

            <TextView
                android:id="@+id/lblStartTime"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_date_Eng"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <ImageView
                android:id="@+id/View01"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblStartTime"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

            <TextView
                android:id="@+id/lblResponseTime"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblStartTime"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_response_time"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <ImageView
                android:id="@+id/View02"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblResponseTime"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

            <TextView
                android:id="@+id/lblObjectStatus"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblResponseTime"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_object_status"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <ImageView
                android:id="@+id/View03"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblObjectStatus"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

            <TextView
                android:id="@+id/lblViewSubmitStatus"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblObjectStatus"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_submit_status"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
            
             <ImageView
                android:id="@+id/View04"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblViewSubmitStatus"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

		
            <TextView
                android:id="@+id/lblViewResponseCode"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblViewSubmitStatus"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_submit_status_code"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
            
            
            <ImageView
                android:id="@+id/View06"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblViewResponseCode"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

            <TextView
                android:id="@+id/lblBatchSize"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblViewResponseCode"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_batchsize"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
            
             <ImageView
                android:id="@+id/View07"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblBatchSize"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

            <TextView
                android:id="@+id/lblTotalSubmitted"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblBatchSize"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:text="@string/title_view_log_total_submitted_records"
                android:textColor="@color/white"
               android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
            
			  <ImageView
                android:id="@+id/View08"
                android:layout_width="2dp"
                android:layout_height="41dp"
                android:layout_toRightOf="@+id/lblTotalSubmitted"
                android:background="@drawable/table_seperator_vertical" >
            </ImageView>

      

            <TextView
                android:id="@+id/lblException"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/lblTotalSubmitted"
                android:paddingLeft="10dp"
                android:text="@string/title_view_log_exception"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>
            
            
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relViewAssignList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/relViewAssignListHeader" >

            <ListView
                android:id="@+id/lstViewLog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="40dp"
                android:cacheColorHint="@color/cachehint"
                android:clickable="false"
                android:divider="@drawable/line1"
                android:dividerHeight="3dp"
                android:fadingEdge="none"
                android:focusable="false"
                android:listSelector="@android:color/transparent"
                android:scrollbars="vertical" 
                android:footerDividersEnabled="true"
                />

            <TextView
                android:id="@+id/lblViewLogMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="100dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:fadingEdge="none"
                android:gravity="center_horizontal"
                android:scrollbars="vertical"
                android:text="@string/title_EmptyList_Eng"
                android:textColor="@color/form_blue"
                android:textSize="25dp"
                android:visibility="invisible" />
        </RelativeLayout>

        
    </RelativeLayout>

</RelativeLayout>